<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/size_56dp"
    android:layout_margin="@dimen/size_20dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_16sp"
            android:textColor="@color/black"
            android:text="@string/set_pin"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:scaleType="fitEnd"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cross"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_13sp"
        android:layout_marginTop="@dimen/size_40dp"
        android:text="@string/enter_password"/>
    <EditText
        android:id="@+id/edit_text_enter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:backgroundTint="@color/tv_active"
        />

    <EditText
        android:id="@+id/edit_text_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:textSize="@dimen/size_13sp"
        android:backgroundTint="@color/tv_active" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_security_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_36dp"
        android:layout_marginLeft="@dimen/size_16dp"
        android:layout_marginRight="@dimen/size_16dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/background_rounded_button" />

</LinearLayout>