<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/size_56dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/size_20sp"
        android:layout_marginTop="@dimen/size_40dp"
        android:text="@string/are_you_sure"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_4dp"
        android:gravity="center"
        android:textColor="@color/tv_inactive"
        android:text="@string/you_want_to_delete_this_page"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_36dp"
        android:layout_marginLeft="@dimen/size_16dp"
        android:layout_marginRight="@dimen/size_16dp"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/background_rounded_button" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/tv_active"
        android:textSize="@dimen/size_16sp"
        android:layout_marginTop="@dimen/size_18dp"
        android:text="@string/cancel"/>

</LinearLayout>