<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/size_27dp"
    android:paddingBottom="@dimen/size_8dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/size_16sp"
        android:text="@string/file_name_and_location"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_13sp"
        android:textColor="@color/tv_inactive"
        android:layout_marginTop="@dimen/size_23dp"
        android:text="@string/file_name"/>
    <EditText
        android:id="@+id/edit_text_enter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/file_name_hint"
        android:textSize="@dimen/size_13sp"
        android:backgroundTint="@color/tv_active" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_4dp"
        android:textColor="@color/tv_inactive"
        android:text="@string/set_file_location"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_5dp"
        android:text="@string/placeholder_file_location"
        android:textColor="@color/tv_active"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/size_6dp"
        android:layout_marginTop="@dimen/size_28dp"
        android:gravity="center"
        android:background="@drawable/background_rounded_rectangle_stroke">
        <ImageView
            android:id="@+id/img_cloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_cloud"/>
        <TextView
            android:id="@+id/tv_cloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_28dp"
            android:layout_alignLeft="@+id/img_cloud"
            android:text="@string/save_on_cloud"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_circle" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_55dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_cross" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_tick" />
    </RelativeLayout>


</LinearLayout>