<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_44dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_cancel"
            android:layout_width="@dimen/size_0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cancel"/>
        <ImageView
            android:id="@+id/img_font"
            android:layout_width="@dimen/size_0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_text"/>
        <ImageView
            android:id="@+id/img_grid"
            android:layout_width="@dimen/size_0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_grid"/>
        <ImageView
            android:id="@+id/img_flash"
            android:layout_width="@dimen/size_0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_flash" />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_12dp"
        android:src="@drawable/img_camera_placeholder"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/size_36dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/img_gallery"
                android:layout_width="@dimen/size_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_gallery" />
            <ImageView
                android:id="@+id/img_capture"
                android:layout_width="@dimen/size_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_capture_picture" />
            <ImageView
                android:id="@+id/img_quality"
                android:layout_width="@dimen/size_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_quality" />
        </LinearLayout>

        <HorizontalScrollView
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/single_screen"
                    style="@style/tv_scan_screen"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/multiple_screen"
                    android:textColor="@color/tv_active"
                    style="@style/tv_scan_screen"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qr"
                    style="@style/tv_scan_screen"/>

                <TextView
                    style="@style/tv_scan_screen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/front_and_back" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id_card"
                    style="@style/tv_scan_screen"/>
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
</LinearLayout>