<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/size_28dp"
        android:layout_marginLeft="@dimen/size_20dp"
        android:layout_marginRight="@dimen/size_20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginRight="@dimen/size_10dp"
            style="@style/tv_scan_screen_active"
            android:text="@string/add_page"/>
        <ImageView
            android:id="@+id/img_add_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_0dp"
        android:layout_marginTop="@dimen/size_12dp"
        android:layout_weight="1.2"
        android:layout_gravity="center"
        android:src="@drawable/img_camera_placeholder" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_0dp"
        android:layout_weight="0.4"
        android:orientation="vertical"
        android:background="@color/bg_grey">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_rounded_rectangle"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_4dp"
            android:gravity="center_horizontal">
            <ImageView
                android:id="@+id/img_left_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_left_image" />
            <TextView
                android:id="@+id/tv_page_number"
                android:layout_width="wrap_content"
                android:textSize="14sp"
                android:fontFamily="@font/manrope_extrabold"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/size_12dp"
                android:layout_gravity="center"
                android:text="1/12"/>
            <ImageView
                android:id="@+id/img_right_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_right_image" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/size_36dp"
            android:layout_marginBottom="@dimen/size_4dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img_rotate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_rotate" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rotate"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img_re_capture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_re_capture" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/retake_this_page"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img_no_crop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_no_crop" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_crop"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img_delete_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_delete_page" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_page"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_0dp"
        android:layout_weight="0.2"
        android:gravity="center"
        android:padding="16dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/size_0dp"
            android:layout_weight="0.1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info"/>
        <TextView
            android:layout_width="@dimen/size_0dp"
            android:layout_weight="1"
            android:textSize="14sp"
            android:fontFamily="@font/manrope_extrabold"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_12dp"
            android:text="@string/edit_and_reorder_on_next_page"/>
        <TextView
            android:layout_width="@dimen/size_0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:gravity="end"
            style="@style/tv_scan_screen_active"
            android:layout_marginEnd="@dimen/size_12dp"
            android:text="@string/next"/>
    </LinearLayout>
</LinearLayout>